Fixed Nav Link spacing in it's nav container

--- a/src/index.css
+++ b/src/index.css
@@ -44,12 +44,12 @@ header {
     height: 6em;
     top: 5em;
     right: 0.5em;
-    padding: 3em 0.5em;
+    padding: 0 0.5em;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    gap: 1em;
+    gap: .25em;
     border-radius: 1em;
     background-color: var(--mainColor);
     z-index: 1;
@@ -58,7 +58,7 @@ header {
     width: 100%;
     padding: 0.05em 0em;
     text-decoration: none;
-    border-radius: 0.5em;
+    border-radius: 0.25em;
     text-align: center;
     color: var(--lightShades);
     font-size: 1.5em;
